[package]
name = "http-timings"
version = "0.3.1"
edition = "2024"
description = "A simple library to measure the key HTTP timings from the development tools"
license-file = "LICENSE"
repository = "https://github.com/metrixweb/http-timings"
readme = "README.md"
keywords = ["ttfb", "http", "timings", "web", "performance"]
categories = ["development-tools", "web-programming"]
documentation = "https://docs.rs/http-timings"
authors = [
    "Fabio Almeida <fabio@metrixweb.ltd>"
]

[dependencies]
url = { version = "2.5" }
openssl = { version = "0.10" }
brotli = { version = "8.0" }
flate2 = { version = "1.1" }
thiserror = { version = "2.0" }